fixed some minor layout issues with flyout and masonry views

--- a/src/client/views/MainView.scss
+++ b/src/client/views/MainView.scss
@@ -33,7 +33,6 @@
     position: absolute;
     width:100%;
     height:100%;
-    border: black 1px solid;
     .documentView-node-topmost {
         background: lightgrey;
     }
@@ -63,8 +62,8 @@
 
 .mainView-expandFlyoutButton {
     position: absolute;
-    top: 30px;
-    right: 30px;
+    top: 5px;
+    right: 5px;
     cursor: pointer;
 }
 
